@@ -1,15 +1,15 @@
 package com.shynieke.statues.datagen.server;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import com.shynieke.statues.blocks.AbstractStatueBase;
 import com.shynieke.statues.registry.StatueRegistry;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
-import net.minecraft.data.loot.EntityLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.data.loot.EntityLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.packs.VanillaLootTableProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.block.Block;
@@ -19,7 +19,6 @@ import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.BonusLevelTableCondition;
 import net.minecraft.world.level.storage.loot.predicates.LootItemKilledByPlayerCondition;
@@ -29,19 +28,18 @@ import net.minecraftforge.registries.RegistryObject;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 import java.util.stream.Stream;
 
 public class StatueLootProvider extends LootTableProvider {
-	public StatueLootProvider(DataGenerator gen) {
-		super(gen);
+	public StatueLootProvider(PackOutput packOutput) {
+		super(packOutput, Set.of(), VanillaLootTableProvider.create(packOutput).getTables());
 	}
 
 	@Override
-	protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-		return ImmutableList.of(Pair.of(StatueBlocks::new, LootContextParamSets.BLOCK), Pair.of(StatueEntities::new, LootContextParamSets.ENTITY));
+	public List<SubProviderEntry> getTables() {
+		return List.of(new SubProviderEntry(StatueBlocks::new, LootContextParamSets.BLOCK),
+				new SubProviderEntry(StatueEntities::new, LootContextParamSets.ENTITY));
 	}
 
 	@Override
@@ -49,9 +47,14 @@ public class StatueLootProvider extends LootTableProvider {
 		map.forEach((name, table) -> LootTables.validate(validationtracker, name, table));
 	}
 
-	private static class StatueBlocks extends BlockLoot {
+	private static class StatueBlocks extends BlockLootSubProvider {
+
+		protected StatueBlocks() {
+			super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+		}
+
 		@Override
-		protected void addTables() {
+		protected void generate() {
 			this.add(StatueRegistry.PEBBLE.get(), (block) -> createSilkTouchDispatchTable(block, applyExplosionCondition(block, LootItem.lootTableItem(Items.FLINT).when(BonusLevelTableCondition.bonusLevelFlatChance(Enchantments.BLOCK_FORTUNE, 0.1F, 0.14285715F, 0.25F, 1.0F)).otherwise(LootItem.lootTableItem(block)))));
 			this.dropSelf(StatueRegistry.DISPLAY_STAND.get());
 			this.dropSelf(StatueRegistry.SOMBRERO.get());
@@ -71,9 +74,13 @@ public class StatueLootProvider extends LootTableProvider {
 		}
 	}
 
-	private static class StatueEntities extends EntityLoot {
+	private static class StatueEntities extends EntityLootSubProvider {
+		protected StatueEntities() {
+			super(FeatureFlags.REGISTRY.allFlags());
+		}
+
 		@Override
-		protected void addTables() {
+		public void generate() {
 			this.add(StatueRegistry.PLAYER_STATUE_ENTITY.get(), LootTable.lootTable()
 					.withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1.0F))
 							.add(LootItem.lootTableItem(StatueRegistry.STATUE_CORE.get()).apply(SetItemCountFunction.setCount(UniformGenerator.between(1.0F, 1.0F))))
@@ -85,14 +92,13 @@ public class StatueLootProvider extends LootTableProvider {
 		}
 
 		@Override
-		protected boolean isNonLiving(EntityType<?> entitytype) {
-			return false;
+		protected boolean canHaveLootTable(EntityType<?> entitytype) {
+			return true;
 		}
 
 		@Override
-		protected Iterable<EntityType<?>> getKnownEntities() {
-			Stream<EntityType<?>> entityTypeStream = StatueRegistry.ENTITIES.getEntries().stream().map(RegistryObject::get);
-			return entityTypeStream::iterator;
+		protected Stream<EntityType<?>> getKnownEntityTypes() {
+			return StatueRegistry.ENTITIES.getEntries().stream().map(RegistryObject::get);
 		}
 	}
 }
